# pygamd_v_me_50_meal

./: .gitignore  README.md  README_en.md  __main__.py  pygamd_v_me_50_meal.py  pyproject.toml  setup.py  update_version.py
pygamd_analysis/: contact_map_calculator.py  coordinates_processor.py  get_sequence.py  mass_density_distribution_calculator.py  rg_rmsd_rmsf_calculator.py  setup.py  utils.py
pygamd_analysis/poetry/: cu_gala.pyi
pygamd_v_me_50_meal/: Functions.py  Protein_RNA_run.py  __init__.py  __main__.py  constants.py  data.py  massage.json  message.json  new.force_field  utils.py  version_check.py
pygamd_v_me_50_meal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pygamd_v_me_50_meal/cg2at/M1+3SPN/: gen_itp4cg2at.py  non-protein.rar
pygamd_v_me_50_meal/file_processor/: xml_data_extractor.py
pygamd_v_me_50_meal/gromacs/: run_gromacs_from_pdb.py
pygamd_v_me_50_meal/gromacs/all_atom_mdp/: ions.mdp  mdrun.mdp  minim.mdp  npt.mdp  nvt.mdp
pygamd_v_me_50_meal/pygamd_analysis/: contact_map_calculator.py  coordinates_processor.py  end_to_end_distance_calculator.py  energy.py  energy_map_calculator.py  get_sequence.py  mass_density_distribution_calculator.py  massage.json  message.json  msd_calculator.py  network_cluster_calculator.py  rg_calculator.py  rg_rmsd_rmsf_calculator.py  rmsd_calculator.py  rmsf_calculator.py  sequence_extractor.py  spanning_ratio.py
pygamd_v_me_50_meal/simulate_creation/: xml_converter.py  xml_convertoer.py  xml_generator.py
pygamd_v_me_50_meal/simulation_runner/: single_protein.py
pygamd_v_me_50_meal/test/: test.py
test/: test.py  xml_converter.py
test/1hcGAS/: cGAS_human_init.xml
test/20fus-526/: 20fus-526_sequence.txt
test/2DNA-134/: 45bpDNA.xml
(+16 files in other folders)
