[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygamd_v_me_50_meal"
version = "0.1.21"
description = "MD analysis toolkit for cGAS-DNA simulations"
authors = [
    { name = "Yuxi Leng", email = "1203969713@qq.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "pandas", "matplotlib",
                "torch", "tqdm", "scipy",
                "scikit-learn", "MDAnalysis"]

[project.urls]
Homepage = "https://gitee.com/lyxlyxlyxxx/pygamd_v_me_50_meal.git"
Repository = "https://github.com/xcslyx/pygamd_v_me_50_meal"

[project.scripts]
v50 = "pygamd_v_me_50_meal.__main__:main"
